RESOLVED FIXED283213
[JSC] Fix HeapVerifier::verifyCellList() return value logic
https://bugs.webkit.org/show_bug.cgi?id=283213
Summary [JSC] Fix HeapVerifier::verifyCellList() return value logic
Dan Hecht
Reported 2024-11-15 16:25:29 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-15 16:25:49 PST
Dan Hecht
Comment 2 2024-11-15 16:27:28 PST
Note You need to log in before you can comment on or make changes to this bug.