[JSC] Fix HeapVerifier::verifyCellList() return value logic https://bugs.webkit.org/show_bug.cgi?id=283213 rdar://140007934

Reviewed by Yijia Huang.

Currently, HeapVerifier::verifyCellList() always returns
true (success) due to a logic bug. Instead, it should
return false if any cell fails to validate.

* Source/JavaScriptCore/tools/HeapVerifier.cpp:
(JSC::HeapVerifier::verifyCellList):

Canonical link: https://commits.webkit.org/286688@main